# osintx-ai

osintx/: .gitignore  LICENSE  README.md  cli.py  osintx.py  pyproject.toml  requirements.txt
osintx/ai/: engine.py  provider.py
osintx/ai/providers/: gemini.py  groq.py  ollama.py
osintx/config/: config.yaml  loader.py
osintx/core/: orchestrator.py  schema.py  tool_registry.py
osintx/database/: store.py
osintx/docs/: ARCHITECTURE.md  CONFIGURATION.md  ETHICS.md  INSTALL.md  PLUGIN_GUIDE.md  USAGE.md
osintx/engines/: entity_extraction.py  normalization.py  risk.py  timeline.py
osintx/integrations/: base.py  dig_tool.py  exiftool_tool.py  nmap_tool.py  registry.py  sherlock_tool.py  theharvester_tool.py  whois_tool.py
osintx/modules/: base.py  company_module.py  domain_module.py  email_module.py  image_module.py  ip_module.py  person_module.py  username_module.py
osintx/plugins/: base.py
osintx/plugins/installed/: crtsh_plugin.py
osintx/reports/: data_report.py  docx_report.py  generator.py  html_report.py  markdown_report.py  pdf_report.py
osintx/tests/: test_engines.py  test_integrations.py  test_shell.py  test_validators.py
osintx/utils/: logger.py  shell.py  validators.py
