[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osintx-ai"
version = "1.0.0"
description = "OSINT-X AI — AI-Powered Linux OSINT Investigation Framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OSINT-X AI Contributors" }]

dependencies = [
    "typer[all]==0.12.3",
    "rich==13.7.1",
    "pydantic==2.7.4",
    "PyYAML==6.0.1",
    "requests==2.32.3",
    "dnspython==2.6.1",
    "python-whois==0.9.4",
    "python-docx==1.1.2",
    "reportlab==4.2.0",
    "Pillow==10.3.0",
    "piexif==1.1.3",
    "pyzbar==0.1.9",
    "sqlalchemy==2.0.30",
    "tldextract==5.1.2",
    "markdown2==2.4.13",
]

[project.optional-dependencies]
dev = ["pytest==8.2.2", "pytest-mock==3.14.0"]

[project.scripts]
osintx = "cli:app"

[tool.setuptools]
py-modules = ["cli", "osintx"]

[tool.setuptools.packages.find]
include = ["config*", "core*", "engines*", "ai*", "modules*", "integrations*", "plugins*", "reports*", "database*", "utils*"]
